--- a/pokemon.html
+++ b/pokemon.html
@@ -16,11 +16,27 @@
         <div class="content-card">
           <div class="containerStats">
             <h2 class="pokemonName"></h2>
-            <h2 class="PV"></h2>
+            <div class="TypePV">
+              <div class="imgType"></div>
+              <h2 class="PV"></h2>
+            </div>
           </div>
           <div class="image"></div>
 
-          <div class="talents"></div>
+          <div class="pouvoir1">
+            <div class="imgEtTalent1">
+              <div class="imgTalent1"></div>
+              <h2 class="talent1">Regard vif :</h2>
+            </div>
+            <h2 class="degats1">45 dégats</h2>
+          </div>
+          <div class="pouvoir2">
+            <div class="imgEtTalent2">
+              <div class="imgTalent2"></div>
+              <h2 class="talent2">Regard vif :</h2>
+            </div>
+            <h2 class="degats2">45 dégats</h2>
+          </div>
         </div>
       </div>
     </div>
